# ma-cross-strategy

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.Dockerfile  config.yaml  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  saas.Dockerfile  tsconfig.json
cmd/agent/: main.go
cmd/ma-cross/: main.go
cmd/param_verify/: main.go
cmd/saas/: main.go
doc/: plan.md  策略数学引擎.md  进化文档.md
internal/adapters/backtest/: adapter.go  adapter_test.go
internal/agent/broker/: client.go
internal/agent/config/: config.go
internal/agent/ws/: client.go
internal/quant/: closes.go  crucible.go  data.go  genome.go  genome_test.go  ghost_dca.go  lot.go  macro_engine.go  market_state.go  math.go  micro_engine.go  micro_engine_test.go
internal/saas/api/: handler_evolution.go  routes.go
internal/saas/auth/: service.go
internal/saas/config/: config.go
internal/saas/cron/: scheduler.go
internal/saas/epoch/: service.go
internal/saas/ga/: engine.go  engine_test.go  evolvable.go  golden_cross_evolvable.go
internal/saas/instance/: manager.go
internal/saas/marketdata/: service.go
internal/saas/store/: db.go  models.go  redis.go
internal/saas/ws/: hub.go  hub_test.go  portfolio.go
internal/strategies/golden_cross/: dead_release.go  doc.go  (+6 more)
src/: backtester.py  backtester.ts  fetcher.py  fetcher.ts  index.ts  indicators.py  main.py  reporter.py  reporter.ts  sentiment.py  signals.py  strategy.ts
web-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
web-frontend/src/: App.tsx  index.css
(+41 files in other folders)
